--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "harkirat singh",
+  "author": "Utkarsh",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
